# pegelstand

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: 2026-03-25_2026-03-26.html  2026-03-25_26.html
html/: 2026-03-25_2026-03-26.html  2026-03-25_2026-03-26_svg.html  ermioni_2025-05-01_2025-09-30.html  ermioni_2025-07-15_2025-08-15.html  greifensee_2025-05-01_2025-09-30.html  murtensee_2026-06-08_2026-06-11.html  neuenburgersee_2025-05-01_2025-09-30.html  paleafokea_2026-04-01_2026-04-10.html  sihlsee_2025-05-01_2025-09-30.html  silvaplana_2025-05-01_2025-09-30.html  silvaplana_2026-03-25_2026-03-26.html  urnersee_2025-05-01_2025-09-30.html
messung/: UbloxGps_20260706_142025.csv  zo_2.csv  zo_3.csv
poseidon_data/: TS_TG_PaleaFokea_20260401-20260410_20260410121032.nc
scripts/: create_event_form_oauth.py
src/: docx_label.rs  gmail.rs  google_sheets.rs  invoice.rs  main.rs  netcdf3.rs  onedrive.rs  svg_report.rs  sync_contacts.rs
whatsapp/: CLAUDE.md  EMAIL_SETUP.md  add-to-group.mjs  build-baugeschichte.mjs  build-pdf.mjs  check-and-send.mjs  diag-delivery.mjs  fetch-erica.mjs  leave-group.mjs  list-groups.mjs  login-pair.mjs  login-qr.mjs  login-read.mjs  login.mjs  package-lock.json  package.json  pdf-generator-gr.mjs  pdf-generator.mjs  read-maik.mjs  read-messages.mjs  reader-merge.mjs  send-doc.mjs  send-group-invite.mjs  send-group-mention.mjs  send.mjs
