[package]
name = "pegelstand"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
resvg = "0.44"
