[package]
name = "pegelstand"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
resvg = "0.44"
base64 = "0.22"
jsonwebtoken = "9"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
urlencoding = "2"
genpdf = { version = "0.2", features = ["images"] }
image = "0.23"
lopdf = "0.34"
anyhow = "1"
